# hypermodern-python

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/my_hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
